--- a/org.jrebirth/showcase/undoredo/.settings/org.sonar.ide.eclipse.core.prefs
+++ b/org.jrebirth/showcase/undoredo/.settings/org.sonar.ide.eclipse.core.prefs
@@ -1,6 +1,6 @@
 analyseLocally=false
 eclipse.preferences.version=1
-extraProperties=
+extraProperties=sonar.host.url\=http\://quality.jrebirth.org\r\nsonar.jdbc.url\=jdbc\:mysql\://localhost\:3306/sonar?useUnicode\=true&characterEncoding\=utf8\r\nsonar.jdbc.driver\=com.mysql.jdbc.Driver\r\nsonar.language\=java
 projectKey=org.jrebirth.showcase\:undoredo
 serverUrl=http\://quality.jrebirth.org
 version=2
