--- a/org.jrebirth/undoredo/pom.xml
+++ b/org.jrebirth/undoredo/pom.xml
@@ -7,7 +7,7 @@
 	</parent>
 	<groupId>org.jrebirth</groupId>
 	<artifactId>undoredo</artifactId>
-	<name>JRebirth Undo/Redo</name>
+	<name> Undo/Redo</name>
 	<description>Provide Undo/Redo features for JRebirth commands</description>
 
 	<dependencies>
