add some fxml features fix site & distribution issues

--- a/org.jrebirth/distribution/pom.xml
+++ b/org.jrebirth/distribution/pom.xml
@@ -25,7 +25,7 @@
 				<executions>
 					<execution>
 						<id>build-assembly</id>
-						<phase>verify</phase>
+						<phase>site</phase>
 						<goals>
 							<goal>single</goal>
 						</goals>
@@ -42,162 +42,4 @@
 		</plugins>
 
 	</build>
-	<dependencies>
-
-		<dependency>
-			<groupId>org</groupId>
-			<artifactId>jrebirth</artifactId>
-			<version>${project.version}</version>
-			<classifier>site</classifier>
-		</dependency>
-
-		<!-- core -->
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>core</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>core</artifactId>
-			<version>${project.version}</version>
-			<classifier>javadoc</classifier>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>core</artifactId>
-			<version>${project.version}</version>
-			<classifier>sources</classifier>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>core</artifactId>
-			<version>${project.version}</version>
-			<classifier>site</classifier>
-		</dependency>
-
-		<!-- presentation -->
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>presentation</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>presentation</artifactId>
-			<version>${project.version}</version>
-			<classifier>javadoc</classifier>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>presentation</artifactId>
-			<version>${project.version}</version>
-			<classifier>sources</classifier>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>presentation</artifactId>
-			<version>${project.version}</version>
-			<classifier>site</classifier>
-		</dependency>
-
-		<!-- transition -->
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>transition</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>transition</artifactId>
-			<version>${project.version}</version>
-			<classifier>javadoc</classifier>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>transition</artifactId>
-			<version>${project.version}</version>
-			<classifier>sources</classifier>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>transition</artifactId>
-			<version>${project.version}</version>
-			<classifier>site</classifier>
-		</dependency>
-
-		<!-- sample -->
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>sample</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>sample</artifactId>
-			<version>${project.version}</version>
-			<classifier>javadoc</classifier>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>sample</artifactId>
-			<version>${project.version}</version>
-			<classifier>sources</classifier>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>sample</artifactId>
-			<version>${project.version}</version>
-			<classifier>site</classifier>
-		</dependency>
-
-		<!-- archetype -->
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>archetype</artifactId>
-			<version>${project.version}</version>
-			<classifier>sources</classifier>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>archetype</artifactId>
-			<version>${project.version}</version>
-			<classifier>site</classifier>
-		</dependency>
-
-		<!-- analyzer -->
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>analyzer</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>analyzer</artifactId>
-			<version>${project.version}</version>
-			<classifier>sources</classifier>
-		</dependency>
-
-		<dependency>
-			<groupId>org.jrebirth</groupId>
-			<artifactId>analyzer</artifactId>
-			<version>${project.version}</version>
-			<classifier>site</classifier>
-		</dependency>
-
-	</dependencies>
 </project>
