First Try to embed FXForm into JRebirth ! :D Thx to Antoine for idea

--- a/org.jrebirth/pom.xml
+++ b/org.jrebirth/pom.xml
@@ -45,6 +45,7 @@
 		<module>transition</module>
 		<module>distribution</module>
 		<!-- <module>form</module> -->
+		<module>fxform</module>
 		<module>undoredo</module>
 		<module>showcase</module>
 	</modules>
