--- a/org.jrebirth/fxform/pom.xml
+++ b/org.jrebirth/fxform/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -8,15 +9,38 @@
 	</parent>
 
 	<groupId>org.jrebirth</groupId>
-	<artifactId>component</artifactId>
-	<name>Components</name>
-	<description>Convenient components to use with JRebirth Core</description>
+	<artifactId>fxform</artifactId>
+	<name>FXForm</name>
+	<description>Integration of FXForm into JRebirth</description>
 
 	<dependencies>
+
 		<dependency>
 			<groupId>org.jrebirth</groupId>
 			<artifactId>core</artifactId>
 			<version>0.7.5-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.dooapp.fxform2</groupId>
+			<artifactId>core</artifactId>
+			<version>0.2.2</version>
+
+			<exclusions>
+				<exclusion>
+					<groupId>javafx</groupId>
+					<artifactId>javafx</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.6</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
+
 </project>
